Bug found on safari, details in bug section of read me

--- a/assets/stylesheets/game-styles.css
+++ b/assets/stylesheets/game-styles.css
@@ -120,7 +120,7 @@ img{
     position: absolute;
     border-radius: 5px;
     background: #000000;
-    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 /* This styling rotates the image to the right direction after the flip event has occured */
